# Hello_world

./: pyproject.toml
config/: settings.json
containers/: env.def
data/raw/: people.json
scripts/: say_hello.py
scripts/drafts/: say_hello.py
src/exohw/: hello.py  utils.py
