[project]
name = "exohw"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A Hello World Project"
# Relative path to the README.md file
readme = "README.md"
# Pin for an analysis (== or ~= for patching) and minimal for a package (>=)
requires-python = "~=3.13.0"
version = "0.1.0"
# Relative path to the license file
license.file = "LICENSE"

dependencies = [
    # pin (== or ~= with patches) when developing scripts, minimal (>=) for packages
    "numpy==2.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/exohw"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
